--- a/index.html
+++ b/index.html
@@ -8,22 +8,44 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/config.js"></script>
-	<script type="text/javascript" src="js/scripts.js"></script>
+	<style>@import 'https://fonts.googleapis.com/css?family=Baloo+Thambi';</style>	
+	<style>@import 'https://fonts.googleapis.com/css?family=Anton';</style>	
+	<style>@import 'https://fonts.googleapis.com/css?family=Coming+Soon';</style>	
 </head>
 <body>
-
+<div class='theWholeWorld'>
 <div class='wrapper'>
 	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 		<div class="carousel-inner" role="listbox">
 		</div>
 	</div>
+	<div class="topNowShowing"></div>
 </div>
 
 <form class='movie-form'>
-	<input type='text' id='movieSearch' placeholder="Movie Name">
+	<input type='text' id='movieSearch' placeholder="Search Any Movie">
 	<button type='submit'>Search</button>
 </form>
 
+<div class='weather-wrapper text-center'>
+	<form id='weather-form'>
+		<label>Get showtimes at your local theater!</label>
+		<input type="text" id="location" placeholder="Location">
+	</form>
+
+	<div id="currTemp"></div>
+	<div class='canvas-wrapper'>
+		<canvas id="weather-canvas"></canvas>
+		<div class="degrees"></div>
+		<div class="weather-description"></div>
+	</div>
+	<div class="weather-week"></div>
+</div>
+<div class='showTimes'></div>
 <div class='search-results'></div>
+
+</div>
+
+<script type="text/javascript" src="js/scripts.js"></script>
 </body>
 </html>
