--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -14,38 +13,33 @@
 </head>
 <body>
 <div class='theWholeWorld'>
-<div class='wrapper'>
-	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-		<div class="carousel-inner" role="listbox">
+	<div class='wrapper'>  <!-- carousel -->  
+		<label class='nowPlaying'>Now Playing!</label><br>
+		<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+			<div class="carousel-inner" role="listbox"></div>
 		</div>
+		<div class="topNowShowing"></div>	<!-- right top box  -->
 	</div>
-	<div class="topNowShowing"></div>
-</div>
-
-<form class='movie-form'>
-	<input type='text' id='movieSearch' placeholder="Search Any Movie">
-	<button type='submit'>Search</button>
-</form>
-
-<form id='weather-form'>
-	<label>Get showtimes at your local theater!</label>
-	<input type="text" id="location" placeholder="Location">
-</form>
-<div class='weather-wrapper text-center'>
-
-
-	<div id="currTemp"></div>
-	<div class='canvas-wrapper'>
-		<canvas id="weather-canvas"></canvas>
-		<div class="degrees"></div>
-		<div class="weather-description"></div>
+	<form id='weather-form'>	
+		<label>Get showtimes at your local theater!</label>
+		<input type="text" id="location" placeholder="30033">
+	</form>
+	<div class='weather-wrapper text-center'>
+		<div id="currTemp"></div>
+		<div class='canvas-wrapper'>
+			<canvas id="weather-canvas"></canvas>
+			<div class="degrees"></div>
+			<div class="weather-description"></div>
+		</div>
+		<div class="weather-week"></div>
+		<div class='showTimes'></div>
 	</div>
-	<div class="weather-week"></div>
-	<div class='showTimes'></div>
-
-</div>
-<div class='search-results'></div>
-
+	<form class='movie-form'>
+		<label>Search Any Movie</label> &nbsp &nbsp
+		<input type='text' id='movieSearch' placeholder="Harry Potter">
+		<button type='submit'>Search</button>
+	</form>
+	<div class='search-results'></div>
 </div>
 
 <script type="text/javascript" src="js/scripts.js"></script>
