tv-shows progress

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div class="topNowShowing"></div>	<!-- right top box  -->
 	</div>
 	<form id='weather-form'>	
-		<label>Get showtimes at your local theater!</label>
+		<label>Enter ZIP Code and Get Showtimes!</label>
 		<input type="text" id="location" placeholder="30033">
 	</form>
 	<div class='weather-wrapper text-center'>
@@ -34,9 +34,10 @@
 		<div class="weather-week"></div>
 		<div class='showTimes'></div>
 	</div>
+	<div class='tv-wrapper'></div>	
 	<form class='movie-form'>
-		<label>Search Any Movie</label> &nbsp &nbsp
-		<input type='text' id='movieSearch' placeholder="Harry Potter">
+		<label>Movie Search</label> &nbsp &nbsp
+		<input type='text' id='movieSearch' placeholder="harry potter">
 		<button type='submit'>Search</button>
 	</form>
 	<div class='search-results'></div>
