--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 	<form id='weather-form'>	
 		<label>Enter ZIP Code and Get Showtimes!</label>
 		<input type="text" id="location" placeholder="30033">
-	</form>
+		&nbsp 
+		<label>Top Tv Shows!</label>
+	</form>	
 	<div class='weather-wrapper text-center'>
 		<div id="currTemp"></div>
 		<div class='canvas-wrapper'>
