--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	</div>
 	<form id='weather-form'>
 		<label>Enter ZIP Code and Get Tickets!</label>
-		<input type="text" id="location" class='form-control' placeholder="30033">&nbsp&nbsp
+		<input type="text" id="location" class='form-control' placeholder="30033">&nbsp;&nbsp;
 		<label>Top TV Shows!</label>
 	</form>	
 	<div class='weather-wrapper text-center'>
@@ -61,7 +61,7 @@
 		</table>
 	</div>
 	<form class='movie-form'>
-		<label>Movie Search</label> &nbsp &nbsp
+		<label>Movie Search</label> &nbsp; &nbsp;
 		<input type='text' id='movieSearch' class='form-control' placeholder="lord of the rings">
         	<button type='submit' class="btn btn-warning" type="button">Search</button>
 	</form>
