--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<label>Top TV Shows!</label>
 	</form>	
 	<div class='weather-wrapper text-center'>
-		<img class='cloud' src='cloud.png'>
+		<img class='cloud' src='images/cloud.png'>
 		<div id="currTemp"></div>
 		<div class='canvas-wrapper'>
 			<canvas id="weather-canvas"></canvas>
